tua/interpreter/generated/TuaParser.py
# Generated from ../grammars/Tua.g4 by ANTLR 4.12.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class TuaParser ( Parser ):

    grammarFileName = "Tua.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'='", "':'", "'Table'", "'['", 
                     "']'", "'Union'", "','", "'List'", "'.'", "'('", "')'", 
                     "'->'", "'end'", "'do'", "'while'", "'if'", "'then'", 
                     "'elseif'", "'else'", "'for'", "'in'", "'function'", 
                     "'return'", "'break'", "'continue'", "'{'", "'}'", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'//'", "'=='", 
                     "'~='", "'<='", "'>='", "'<'", "'>'", "'..'", "'and'", 
                     "'&'", "'or'", "'|'", "'^'", "'not'", "'false'", "'true'", 
                     "'nil'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "FALSE", "TRUE", "NIL", "NAME", "INT", "FLOAT", "DOUBLEQUOTESTRING", 
                      "SINGLEQUOTESTRING", "LINE_COMMENT", "WHITESPACE" ]

    RULE_program = 0
    RULE_block = 1
    RULE_stat = 2
    RULE_assignment = 3
    RULE_newvariable = 4
    RULE_var = 5
    RULE_nametype = 6
    RULE_type = 7
    RULE_tableType = 8
    RULE_unionType = 9
    RULE_listType = 10
    RULE_prefix = 11
    RULE_suffix = 12
    RULE_exp = 13
    RULE_parexp = 14
    RULE_functionbody = 15
    RULE_dostat = 16
    RULE_whilestat = 17
    RULE_ifstat = 18
    RULE_forintstat = 19
    RULE_foriteratorstat = 20
    RULE_functiondef = 21
    RULE_laststat = 22
    RULE_typednamelist = 23
    RULE_functioncall = 24
    RULE_explist = 25
    RULE_tableconstructor = 26
    RULE_fieldlist = 27
    RULE_field = 28
    RULE_binopAddSub = 29
    RULE_binopMulDivMod = 30
    RULE_binopComparison = 31
    RULE_binopConcat = 32
    RULE_binopAnd = 33
    RULE_binopOr = 34
    RULE_binopPower = 35
    RULE_unop = 36
    RULE_string = 37
    RULE_number = 38
    RULE_bool = 39

    ruleNames =  [ "program", "block", "stat", "assignment", "newvariable", 
                   "var", "nametype", "type", "tableType", "unionType", 
                   "listType", "prefix", "suffix", "exp", "parexp", "functionbody", 
                   "dostat", "whilestat", "ifstat", "forintstat", "foriteratorstat", 
                   "functiondef", "laststat", "typednamelist", "functioncall", 
                   "explist", "tableconstructor", "fieldlist", "field", 
                   "binopAddSub", "binopMulDivMod", "binopComparison", "binopConcat", 
                   "binopAnd", "binopOr", "binopPower", "unop", "string", 
                   "number", "bool" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    FALSE=48
    TRUE=49
    NIL=50
    NAME=51
    INT=52
    FLOAT=53
    DOUBLEQUOTESTRING=54
    SINGLEQUOTESTRING=55
    LINE_COMMENT=56
    WHITESPACE=57

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.12.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(TuaParser.BlockContext,0)


        def EOF(self):
            return self.getToken(TuaParser.EOF, 0)

        def getRuleIndex(self):
            return TuaParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = TuaParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.block()
            self.state = 81
            self.match(TuaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TuaParser.StatContext)
            else:
                return self.getTypedRuleContext(TuaParser.StatContext,i)


        def laststat(self):
            return self.getTypedRuleContext(TuaParser.LaststatContext,0)


        def getRuleIndex(self):
            return TuaParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = TuaParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2251799824400384) != 0):
                self.state = 83
                self.stat()
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==1:
                    self.state = 84
                    self.match(TuaParser.T__0)


                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 117440512) != 0):
                self.state = 92
                self.laststat()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def newvariable(self):
            return self.getTypedRuleContext(TuaParser.NewvariableContext,0)


        def assignment(self):
            return self.getTypedRuleContext(TuaParser.AssignmentContext,0)


        def functioncall(self):
            return self.getTypedRuleContext(TuaParser.FunctioncallContext,0)


        def dostat(self):
            return self.getTypedRuleContext(TuaParser.DostatContext,0)


        def whilestat(self):
            return self.getTypedRuleContext(TuaParser.WhilestatContext,0)


        def ifstat(self):
            return self.getTypedRuleContext(TuaParser.IfstatContext,0)


        def forintstat(self):
            return self.getTypedRuleContext(TuaParser.ForintstatContext,0)


        def foriteratorstat(self):
            return self.getTypedRuleContext(TuaParser.ForiteratorstatContext,0)


        def functiondef(self):
            return self.getTypedRuleContext(TuaParser.FunctiondefContext,0)


        def getRuleIndex(self):
            return TuaParser.RULE_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat" ):
                listener.enterStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat" ):
                listener.exitStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat" ):
                return visitor.visitStat(self)
            else:
                return visitor.visitChildren(self)




    def stat(self):

        localctx = TuaParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stat)
        try:
            self.state = 104
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 95
                self.newvariable()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 96
                self.assignment()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 97
                self.functioncall()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 98
                self.dostat()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 99
                self.whilestat()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 100
                self.ifstat()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 101
                self.forintstat()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 102
                self.foriteratorstat()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 103
                self.functiondef()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self):
            return self.getTypedRuleContext(TuaParser.VarContext,0)


        def exp(self):
            return self.getTypedRuleContext(TuaParser.ExpContext,0)


        def getRuleIndex(self):
            return TuaParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = TuaParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.var()
            self.state = 107
            self.match(TuaParser.T__1)
            self.state = 108
            self.exp(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NewvariableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nametype(self):
            return self.getTypedRuleContext(TuaParser.NametypeContext,0)


        def exp(self):
            return self.getTypedRuleContext(TuaParser.ExpContext,0)


        def getRuleIndex(self):
            return TuaParser.RULE_newvariable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNewvariable" ):
                listener.enterNewvariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNewvariable" ):
                listener.exitNewvariable(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNewvariable" ):
                return visitor.visitNewvariable(self)
            else:
                return visitor.visitChildren(self)




    def newvariable(self):

        localctx = TuaParser.NewvariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_newvariable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.nametype()
            self.state = 111
            self.match(TuaParser.T__1)
            self.state = 112
            self.exp(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(TuaParser.NAME, 0)

        def suffix(self):
            return self.getTypedRuleContext(TuaParser.SuffixContext,0)


        def getRuleIndex(self):
            return TuaParser.RULE_var

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar" ):
                listener.enterVar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar" ):
                listener.exitVar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar" ):
                return visitor.visitVar(self)
            else:
                return visitor.visitChildren(self)




    def var(self):

        localctx = TuaParser.VarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_var)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(TuaParser.NAME)
            self.state = 116
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 115
                self.suffix()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NametypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(TuaParser.NAME, 0)

        def type_(self):
            return self.getTypedRuleContext(TuaParser.TypeContext,0)


        def getRuleIndex(self):
            return TuaParser.RULE_nametype

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNametype" ):
                listener.enterNametype(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNametype" ):
                listener.exitNametype(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNametype" ):
                return visitor.visitNametype(self)
            else:
                return visitor.visitChildren(self)




    def nametype(self):

        localctx = TuaParser.NametypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_nametype)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(TuaParser.NAME)
            self.state = 119
            self.match(TuaParser.T__2)
            self.state = 120
            self.type_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(TuaParser.NAME, 0)

        def NIL(self):
            return self.getToken(TuaParser.NIL, 0)

        def listType(self):
            return self.getTypedRuleContext(TuaParser.ListTypeContext,0)


        def unionType(self):
            return self.getTypedRuleContext(TuaParser.UnionTypeContext,0)


        def tableType(self):
            return self.getTypedRuleContext(TuaParser.TableTypeContext,0)


        def getRuleIndex(self):
            return TuaParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type_(self):

        localctx = TuaParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_type)
        try:
            self.state = 127
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [51]:
                self.enterOuterAlt(localctx, 1)
                self.state = 122
                self.match(TuaParser.NAME)
                pass
            elif token in [50]:
                self.enterOuterAlt(localctx, 2)
                self.state = 123
                self.match(TuaParser.NIL)
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 3)
                self.state = 124
                self.listType()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 4)
                self.state = 125
                self.unionType()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 5)
                self.state = 126
                self.tableType()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TableTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(TuaParser.TypeContext,0)


        def getRuleIndex(self):
            return TuaParser.RULE_tableType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTableType" ):
                listener.enterTableType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTableType" ):
                listener.exitTableType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTableType" ):
                return visitor.visitTableType(self)
            else:
                return visitor.visitChildren(self)




    def tableType(self):

        localctx = TuaParser.TableTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_tableType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(TuaParser.T__3)
            self.state = 130
            self.match(TuaParser.T__4)
            self.state = 131
            self.type_()
            self.state = 132
            self.match(TuaParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UnionTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TuaParser.TypeContext)
            else:
                return self.getTypedRuleContext(TuaParser.TypeContext,i)


        def getRuleIndex(self):
            return TuaParser.RULE_unionType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnionType" ):
                listener.enterUnionType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnionType" ):
                listener.exitUnionType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnionType" ):
                return visitor.visitUnionType(self)
            else:
                return visitor.visitChildren(self)




    def unionType(self):

        localctx = TuaParser.UnionTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_unionType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(TuaParser.T__6)
            self.state = 135
            self.match(TuaParser.T__4)
            self.state = 136
            self.type_()
            self.state = 139 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 137
                self.match(TuaParser.T__7)
                self.state = 138
                self.type_()
                self.state = 141 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==8):
                    break

            self.state = 143
            self.match(TuaParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(TuaParser.TypeContext,0)


        def getRuleIndex(self):
            return TuaParser.RULE_listType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListType" ):
                listener.enterListType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListType" ):
                listener.exitListType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListType" ):
                return visitor.visitListType(self)
            else:
                return visitor.visitChildren(self)




    def listType(self):

        localctx = TuaParser.ListTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_listType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(TuaParser.T__8)
            self.state = 146
            self.match(TuaParser.T__4)
            self.state = 147
            self.type_()
            self.state = 148
            self.match(TuaParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrefixContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self):
            return self.getTypedRuleContext(TuaParser.VarContext,0)


        def functioncall(self):
            return self.getTypedRuleContext(TuaParser.FunctioncallContext,0)


        def suffix(self):
            return self.getTypedRuleContext(TuaParser.SuffixContext,0)


        def getRuleIndex(self):
            return TuaParser.RULE_prefix

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrefix" ):
                listener.enterPrefix(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrefix" ):
                listener.exitPrefix(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrefix" ):
                return visitor.visitPrefix(self)
            else:
                return visitor.visitChildren(self)




    def prefix(self):

        localctx = TuaParser.PrefixContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_prefix)
        try:
            self.state = 155
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 150
                self.var()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 151
                self.functioncall()
                self.state = 153
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                if la_ == 1:
                    self.state = 152
                    self.suffix()


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SuffixContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TuaParser.ExpContext)
            else:
                return self.getTypedRuleContext(TuaParser.ExpContext,i)


        def NAME(self, i:int=None):
            if i is None:
                return self.getTokens(TuaParser.NAME)
            else:
                return self.getToken(TuaParser.NAME, i)

        def getRuleIndex(self):
            return TuaParser.RULE_suffix

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSuffix" ):
                listener.enterSuffix(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSuffix" ):
                listener.exitSuffix(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSuffix" ):
                return visitor.visitSuffix(self)
            else:
                return visitor.visitChildren(self)




    def suffix(self):

        localctx = TuaParser.SuffixContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_suffix)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 163
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [5]:
                        self.state = 157
                        self.match(TuaParser.T__4)
                        self.state = 158
                        self.exp(0)
                        self.state = 159
                        self.match(TuaParser.T__5)
                        pass
                    elif token in [10]:
                        self.state = 161
                        self.match(TuaParser.T__9)
                        self.state = 162
                        self.match(TuaParser.NAME)
                        pass
                    else:
                        raise NoViableAltException(self)


                else:
                    raise NoViableAltException(self)
                self.state = 165 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parexp(self):
            return self.getTypedRuleContext(TuaParser.ParexpContext,0)


        def number(self):
            return self.getTypedRuleContext(TuaParser.NumberContext,0)


        def string(self):
            return self.getTypedRuleContext(TuaParser.StringContext,0)


        def bool_(self):
            return self.getTypedRuleContext(TuaParser.BoolContext,0)


        def NIL(self):
            return self.getToken(TuaParser.NIL, 0)

        def prefix(self):
            return self.getTypedRuleContext(TuaParser.PrefixContext,0)


        def unop(self):
            return self.getTypedRuleContext(TuaParser.UnopContext,0)


        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TuaParser.ExpContext)
            else:
                return self.getTypedRuleContext(TuaParser.ExpContext,i)


        def tableconstructor(self):
            return self.getTypedRuleContext(TuaParser.TableconstructorContext,0)


        def binopPower(self):
            return self.getTypedRuleContext(TuaParser.BinopPowerContext,0)


        def binopMulDivMod(self):
            return self.getTypedRuleContext(TuaParser.BinopMulDivModContext,0)


        def binopAddSub(self):
            return self.getTypedRuleContext(TuaParser.BinopAddSubContext,0)

